# stm32mp2-low-power

./: .checkpatch.conf  .gitignore  CMakeLists.txt  CONTRIBUTING.md  License.md
cmake/: cmsis_core.cmake  cmsis_core_CMakeLists.txt  cmsis_device_mp2.cmake  cmsis_device_mp2_CMakeLists.txt  stm32cube.cmake  stm32cube_CMakeLists.txt  stm32cube_cmsis_core.cmake  stm32cube_cmsis_core_CMakeLists.txt  stm32cube_cmsis_device.cmake  stm32cube_cmsis_device_CMakeLists.txt  stm32cube_hal.cmake  stm32cube_hal_CMakeLists.txt  stm32ddrfw_util.cmake  stm32ddrfw_util_CMakeLists.txt  stm32mp2_lp_version.cmake  stm32mp2xx_hal_driver.cmake  stm32mp2xx_hal_driver_CMakeLists.txt  toolchain_GNUARM.cmake
config/: config_base.cmake
include/: cmsis.h  main.h  partition_stm32mp2xx.h  stm32mp2xx_hal_conf.h  version.h.in
interface/include/: stm32mp2_lp_fw_api.h
interface/src/: stm32mp2_lp_fw_api.c
linker_scripts/: stm32mp25xx_RETRAM_m33.ld  stm32mp2xx_RETRAM_m33.ld
src/: main.c  startup_stm32mp2xx_m33.S  stm32mp2xx_it.c  syscalls.c  system_stm32mp2xx.c
